ChangeLog
---------

Release 0.4:
 - Added "Hunt the Wumpus"
  - by William Leue
 - Added "Minesweeper"
  - by William Leue
 - Added "Scott Adams' Pirate Adventure"
  - by kind permission of Scott Adams
  - ported to CMM2 by "thwill"

Release 0.3.1:
 - This is a maintenance release, it contains the same inventory of programs
   as Release 0.3.
 - Updated "Mandelbrot Explorer" to version 1.2
   - by "Sasquatch"
   - fixed responsiveness to both USB keyboard and serial console.
   - added source for pure MMBasic version of Mandelbrot subroutine to the
     bottom of the program.
   - changed hotkeys on file and help screens for better integration with the
     "Welcome Tape".
 - Updated "Barnsley's Fern using CSUB"
   - by "Sasquatch"
   - fixed responsiveness to both USB keyboard and serial console.
 - Changed how returning from a program to the menu is implemented,
   this should not cause any visible difference.

Release 0.3:
 - Added "Mandelbrot Explorer"
  - by "Sasquatch"
 - Added "Playing Cards" demo
  - by "vegipete"
 - Added "Graphic Test Card" utility
  - by "TassyJim"
 - Added "Barnsley's Fern using CSUB"
  - by "Sasquatch"

Release 0.2:
 - Added missing 'Conway's Game of Life' implementation
   - by Bill McKinley & "TassyJim"
 - Added 'Speech Demo'
   - by "capsikin"
 - Added 'Chirps, an interactive sound effect demo'
   - by "capsikin"
 - Added new graphical welcome/splash screen
   - by "vegipete"
 - Updated Lunar Lander to v7.2
   - by "vegipete"
 - Changed menu framework to display "Loading <file>..." message
   - due to the delay whilst the VGA monitor switches resolution/frequency you
     may not always see this when transitioning to the menu from a program that
     was not using Mode 1.

Release 0.1:
 - Initial release to The Back Shed.
 - Scott Adams' Pirate Adventure is included but doesn't work.