@@ -9,6 +9,10 @@ Release 0.4:
  - Added "Scott Adams' Pirate Adventure"
   - by kind permission of Scott Adams
   - ported to CMM2 by "thwill"
+ - Updated "Mandelbrot Explorer" to version 1.3
+   - by "Sasquatch"
+   - CSUB now renders the Base image in under 1 second on a 400MHz CMM2 due to
+     changes in compiler and linker/library settings.
 
 Release 0.3.1:
  - This is a maintenance release, it contains the same inventory of programs
